# spark-ddl-parser

./: .gitignore
rust/: Cargo.toml  README.md
rust/src/: error.rs  parser.rs  types.rs
rust/tests/: parse_ddl.rs  test_errors.rs  test_performance.rs
scripts/: reword-all.sh  strip-cursor-coauthor.sh
tests/: test_ddl_integration.py  test_ddl_parser_complex.py  test_ddl_parser_edge_cases.py  test_ddl_parser_properties.py  test_ddl_parser_regression.py  test_ddl_schema_parser.py
