[package]
name = "spark-ddl-parser"
version = "0.1.0"
edition = "2021"
description = "Zero-dependency PySpark DDL schema parser"
license = "MIT"
authors = ["Odos Matthews <odosmatthews@gmail.com>"]

[lib]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
